--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8081
 MONDGODB_ATLAS=mongodb+srv://stiven:jaimes08@miclustercafe.x0cmbvx.mongodb.net/cafeDB
+SECRETORPRIVATEKEY=Est0esMyPublicK3y1s3
