CRUD de Categorias

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=8081
 MONDGODB_ATLAS=mongodb+srv://stiven:jaimes08@miclustercafe.x0cmbvx.mongodb.net/cafeDB
 SECRETORPRIVATEKEY=Est0esMyPublicK3y1s3
+
+
+GOOGLE_CLIENT_ID=117375795917-jeegc361kaoh05fuovo4o6vc0ctf7jbd.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
